--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,49 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Oswald', sans-serif;
-
+  box-sizing: border-box;
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-family: "Oswald", sans-serif;
 }
-
 
 .app {
-    /* match the viewport */
-    height: 100vh;
-    width: 100vw;
+  /* match the viewport */
+  height: 100vh;
+  width: 100vw;
 
-    /* align items in a grid */
-    display: grid; 
-    grid-template-columns: 100%;
-    grid-template-rows: 15vh 85vh;
+  /* align items in a grid */
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 15vh 85vh;
 }
 header {
-    /* position */
-    grid-row: 1;
+  /* position */
+  grid-row: 1;
 
-    /* use flex box to fill the available area and center the text */
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    margin: auto;
-    font-size: 10vh;
-    
-    border-radius: 10vh;
-    border-bottom: 2px solid black;
+  /* use flex box to fill the available area and center the text */
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin: auto;
+  font-size: 10vh;
+
+  border-radius: 10vh;
+  border-bottom: 2px solid white;
 }
-
-div.search {
-    grid-row: 2;
-
-    display: flex;
-    place-content: center;
-    border: none; 
-    width: 100%;
+main {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 15% 85%;
 }
-div.search > input {
-    width: 50vw; 
-    margin: auto; 
+main div.search {
+  /* location in main */
+  grid-column: 1;
+  grid-row: 1;
+
+  /* treat as grid container */
+  display: grid;
+  grid-template-columns: 10vw 60vw 20vw 10vw;
+  grid-template-rows: 100%;
+
+  border: none;
+  width: 100%;
+}
+main div.search > input,
+main div.search > button {
+  font-size: large;
+  height: 2rem;
+  border-radius: 5px;
+  margin: auto;
+}
+main div.search > input {
+  /* position in search component */
+  grid-row: 1;
+  grid-column: 2;
+
+  background-color: gray;
+  border: none;
+  margin: auto;
+  width: 50vw;
+  padding: 0 1rem;
+}
+main div.search > input::placeholder {
+  color: black;
+}
+main div.search > input::placeholder:hover {
+  color: white;
+}
+main div.search > button {
+  /* position in search component */
+  grid-row: 1;
+  grid-column: 3;
+
+  display: flex;
+  place-content: center;
+  width: 15vw;
+  background-color: gray;
+  color: black;
+}
+main div.search > button:hover {
+  color: white;
 }
